# main

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  CTestConfig.cmake  LICENSE.md  README.md  appveyor.yml  contributors.md  license.md  linux_updater.sh  make.py  pk02_door02.tex  pk02_wall_big02a.tex  pk02_wall_big02b.tex  readme.md  server.bat  tesseract.bat  tesseract_unix  valhalla.bat  valhalla_unix
.github/workflows/: linux.yml  mingw.yml  windows.yml
bin_unix/: linux_64_client  linux_64_server  native_client  native_server  readme.txt  tess_client  tess_server
cmake/: CI.CTestScript.cmake  CopyDllsForDebug.cmake  LTO.cmake  VALHALLAConfig.cmake.in  Warnings.cmake
config/: blendbrush.cfg  botname.cfg  default.cfg  default_map_models.cfg  default_map_settings.cfg  font.cfg  game.cfg  heightmap.cfg  keymap.cfg  scoreboard.cfg  server-init.cfg  server-init_default.cfg  sound.cfg  stdedit.cfg  stdlib.cfg  testserver.cfg  tip.cfg  ui.cfg
config/glsl/: aa.cfg  deferred.cfg  hud.cfg  particle.cfg  postfx.cfg  shared.cfg  sky.cfg  world.cfg
config/server/: bot.cfg  geo.cfg  maplistgen.cfg  maprotation.cfg  server.cfg
config/server/example/: bot.cfg  init.cfg  server.cfg
config/sound/: announcer.cfg  item.cfg  miscellaneous.cfg  player.cfg  weapon.cfg
config/ui/: colorconvert.cfg  colorlib.cfg  debug.cfg  firstrun.cfg  fkey.cfg  gamesettings.cfg  ghud.cfg  helpers.cfg  hud.cfg  langdb.cfg  lib.cfg  libnew.cfg  options.cfg  perm.cfg  permanent.cfg  scoreboard.cfg  serverbrowser.cfg  shaders.cfg  stats.cfg  style.cfg  tooltip.cfg  weaponmenu.cfg
config/ui/editor/: ai.cfg  entities.cfg  materials.cfg  models.cfg  postfx.cfg  prefabs.cfg  textures.cfg
config/ui/hud/: editstats.cfg  editvars.cfg  entity.cfg  fullconsole.cfg  gamehud.cfg  geo_prefab.cfg  mapmodel_browser.cfg  material.cfg  postfx.cfg  scoreboard.cfg  story.cfg  taskbar.cfg  texture_browser.cfg
config/ui/menus/: _scoreboard_old.cfg  cci.cfg  controls.cfg  credits.cfg  dialogs.cfg  main.cfg  map_browser.cfg  notepad.cfg  options.cfg  player_setup.cfg  recorder.cfg  scoreboard.cfg  server_browser.cfg  server_manager.cfg  settings.cfg  stats.cfg  voicecom.cfg
data/audio/item/: desktop.ini  info.txt
data/config/: blendbrush.cfg  botname.cfg  default.cfg  default_map_settings.cfg  font.cfg  game.cfg  glsl.cfg  init.cfg  maplistgen.cfg  restore.cfg  saved.cfg  server-init.cfg  server-init_default.cfg  servers.cfg  sound.cfg  stdedit.cfg  stdlib.cfg  tip.cfg  ui.cfg
data/map/: Azag(Sauer).txt  Azag(Tesse).txt  alphacorp.cfg  alphacorp.ogz  alphacorp.wpt  azag.cfg  azag.ogz  azag.wpt  azag2.cfg  azag2.ogz  azag2.txt  azag2.wpt  complex.cfg  complex.ogz  complex.wpt  desertwind.cfg  desertwind.wpt  lightspeed.cfg  lightspeed.ogz  nebula.cfg  nebula.ogz  nebula.wpt  ot2.cfg  ot2.ogz  ot2.wpt  pinelake.cfg  pinelake.ogz  pinelake_night.cfg  reflection.cfg  reflection.ogz  reflection.txt  sera.cfg  sera.ogz  sera.wpt  steelribs.cfg  steelribs.ogz  turbine_a2.cfg  turbine_a2.ogz  waterworks.cfg  waterworks.ogz  (+4 more)
media/map/: Azag(Sauer).txt  Azag(Tesse).txt  alphacorp.cfg  azag.cfg  azag.ogz  complex.cfg  desertwind.cfg  lightspeed.cfg  lightspeed.wpt  nebula.cfg  ot2.cfg  pinelake.cfg  pinelake.wpt  pinelake_night.cfg  pinelake_night.ogz  pinelake_night.wpt  reflection.cfg  reflection.ogz  reflection.wpt  sera.cfg  sera.ogz  steelribs.cfg  steelribs.wpt  turbine_a2.cfg  turbine_a2.ogz  turbine_a2.wpt  waterworks.cfg
source/: Makefile  confusables.py  geoip_check.sh  readme_sauerbraten.txt  readme_tesseract.txt
source/enet/: Makefile  protocol.c
source/engine/: aa.cpp  animmodel.h  bih.cpp  blend.cpp  client.cpp  command.cpp  console.cpp  dynlight.cpp  engine.h  explosion.h  grass.cpp  iqm.h  lensflare.h  light.cpp  lightning.h  liquid.cpp  main.cpp  master.cpp  material.cpp  md2.h  md3.h  md5.h  menus.cpp  model.h  movie.cpp  normal.cpp  octa.cpp  octaedit.cpp  octarender.cpp  physics.cpp  pvs.cpp  ragdoll.h  rendergl.cpp  renderlights.cpp  rendermodel.cpp  renderparticles.cpp  rendersky.cpp  rendertext.cpp  renderva.cpp  server.cpp  (+14 more)
source/game/: ai.cpp  ai.h  aimanager.h  announcer.cpp  announcer.h  camera.cpp  ctf.h  elimination.h  entity.cpp  entity.h  event.cpp  event.h  extinfo.h  game.cpp  game.h  gameclient.cpp  gamemode.h  gamephysics.cpp  gameserver.cpp  gameshader.cpp  geoip.h  hud.cpp  monster.cpp  monster.h  projectile.cpp  projectile.h  query.cpp  query.h  render.cpp  scoreboard.cpp  waypoint.cpp  weapon.cpp  weapon.h  worlddata.cpp
source/geoip/: geoip_check.sh  geoip_test.cpp
source/shared/: crypto.cpp  cube.h  ents.h  geom.h  glemu.h  iengine.h  igame.h  stream.cpp  tools.cpp  tools.h  unicode.h  zip.cpp
source/vcpp/: mingw.rc  valhalla.cbp  valhalla.rc  valhalla.sln  valhalla.vcxproj  valhalla.vcxproj.filters
src/: Makefile  ai.cpp  readme_valhalla_project.txt  tess_client  tess_server
src/enet/: Makefile
src/engine/: animmodel.h  bih.cpp  bih.h  blend.cpp  client.cpp  command.cpp  console.cpp  engine.h  explosion.h  grass.cpp  hitzone.h  iqm.h  lensflare.h  light.cpp  lightning.h  main.cpp  master.cpp  material.cpp  md2.h  md3.h  md5.h  menus.cpp  model.h  movie.cpp  obj.h  octa.cpp  octaedit.cpp  octarender.cpp  physics.cpp  pvs.cpp  ragdoll.h  rendergl.cpp  renderlights.cpp  rendermodel.cpp  renderparticles.cpp  rendersky.cpp  rendertext.cpp  renderva.cpp  server.cpp  serverbrowser.cpp  (+13 more)
src/game/: ai.cpp  ai.h  aiman.h  client.cpp  ctf.h  elimination.h  entity.cpp  entity.h  extinfo.h  game.cpp  game.h  gameclient.cpp  gamemode.h  gameserver.cpp  render.cpp  scoreboard.cpp  server.cpp  waypoint.cpp  weapon.cpp  weapon.h
src/shared/: command.h  crypto.cpp  ents.h  geom.h  iengine.h  igame.h  stream.cpp  tools.cpp  tools.h  zip.cpp
src/vcpp/: mingw.rc  mingw.res  tesseract.nsi  tesseract.rc  tesseract.sln  tesseract.vcxproj  tesseract.vcxproj.filters  valhalla-master.cbp  valhalla.vcxproj  valhalla.vcxproj.filters
src/xcode/: Launcher.m  main.m  tesseract.plist
tests/: CMakeLists.txt  failtest.cpp  successtest.cpp
(+717 files in other folders)
